Fixed route prefixes for splitted downstream services

--- a/src/Ballware.ApiGateway.Service/appsettings.json
+++ b/src/Ballware.ApiGateway.Service/appsettings.json
@@ -32,7 +32,7 @@
     "Routes": [
       {
         "ServiceKey": "Meta",
-        "DownstreamPathTemplate": "/meta/{everything}",        
+        "DownstreamPathTemplate": "/api/{everything}",        
         "UpstreamPathTemplate": "/meta/{everything}",
         "AuthenticationOptions": {
           "AuthenticationProviderKey": "Bearer",
@@ -41,7 +41,7 @@
       },
       {
         "ServiceKey": "Tenant",
-        "DownstreamPathTemplate": "/tenant/{everything}",
+        "DownstreamPathTemplate": "/api/{everything}",
         "UpstreamPathTemplate": "/tenant/{everything}",
         "AuthenticationOptions": {
           "AuthenticationProviderKey": "Bearer",
@@ -50,13 +50,13 @@
       },
       {
         "ServiceKey": "Generic",
-        "DownstreamPathTemplate": "/generic/{application}/{entity}/download",
+        "DownstreamPathTemplate": "/api/generic/{application}/{entity}/download",
         "UpstreamPathTemplate": "/generic/{application}/{entity}/download",
         "AllowedHttpMethods": [ "GET" ]
       },
       {
         "ServiceKey": "Generic",
-        "DownstreamPathTemplate": "/generic/{everything}",
+        "DownstreamPathTemplate": "/api/generic/{everything}",
         "UpstreamPathTemplate": "/generic/{everything}",
         "AuthenticationOptions": {
           "AuthenticationProviderKey": "Bearer",
