Added ml service to default configuration

--- a/src/Ballware.ApiGateway.Service/appsettings.json
+++ b/src/Ballware.ApiGateway.Service/appsettings.json
@@ -26,13 +26,18 @@
       "Scheme": "https",
       "Host": "documents.ballware.de",
       "Port": 443
+    },
+    "Ml": {
+      "Scheme": "https",
+      "Host": "ml.ballware.de",
+      "Port": 443
     }
   },
   "Ocelot": {
     "Routes": [
       {
         "ServiceKey": "Meta",
-        "DownstreamPathTemplate": "/api/{everything}",        
+        "DownstreamPathTemplate": "/meta/{everything}",        
         "UpstreamPathTemplate": "/meta/{everything}",
         "AuthenticationOptions": {
           "AuthenticationProviderKey": "Bearer",
@@ -41,7 +46,7 @@
       },
       {
         "ServiceKey": "Tenant",
-        "DownstreamPathTemplate": "/api/{everything}",
+        "DownstreamPathTemplate": "/tenant/{everything}",
         "UpstreamPathTemplate": "/tenant/{everything}",
         "AuthenticationOptions": {
           "AuthenticationProviderKey": "Bearer",
@@ -50,13 +55,13 @@
       },
       {
         "ServiceKey": "Generic",
-        "DownstreamPathTemplate": "/api/generic/{application}/{entity}/download",
+        "DownstreamPathTemplate": "/generic/{application}/{entity}/download",
         "UpstreamPathTemplate": "/generic/{application}/{entity}/download",
         "AllowedHttpMethods": [ "GET" ]
       },
       {
         "ServiceKey": "Generic",
-        "DownstreamPathTemplate": "/api/generic/{everything}",
+        "DownstreamPathTemplate": "/generic/{everything}",
         "UpstreamPathTemplate": "/generic/{everything}",
         "AuthenticationOptions": {
           "AuthenticationProviderKey": "Bearer",
@@ -67,6 +72,15 @@
         "ServiceKey": "Document",
         "DownstreamPathTemplate": "/document/{everything}",
         "UpstreamPathTemplate": "/document/{everything}"
+      },
+      {
+        "ServiceKey": "Ml",
+        "DownstreamPathTemplate": "/ml/{everything}",
+        "UpstreamPathTemplate": "/ml/{everything}",
+        "AuthenticationOptions": {
+          "AuthenticationProviderKey": "Bearer",
+          "AllowedScopes": []
+        }
       }
     ]
   }
