Added storage downstream api

--- a/src/Ballware.ApiGateway.Service/appsettings.json
+++ b/src/Ballware.ApiGateway.Service/appsettings.json
@@ -22,9 +22,9 @@
       "Host": "meta.ballware.de",
       "Port": 443
     },
-    "Document": {
+    "Storage": {
       "Scheme": "https",
-      "Host": "documents.ballware.de",
+      "Host": "storage.ballware.de",
       "Port": 443
     },
     "Ml": {
@@ -69,8 +69,8 @@
         }
       },
       {
-        "ServiceKey": "Document",
-        "DownstreamPathTemplate": "/document/{everything}",
+        "ServiceKey": "Storage",
+        "DownstreamPathTemplate": "/{everything}",
         "UpstreamPathTemplate": "/document/{everything}"
       },
       {
