--- a/src/Ballware.ApiGateway.Service/appsettings.Development.json
+++ b/src/Ballware.ApiGateway.Service/appsettings.Development.json
@@ -13,8 +13,7 @@
       "HttpsInlineCertAndKeyFile": {
         "Url": "https://localhost:6010",
         "Certificate": {
-          "Path": "../../certificate/localhost.pem",
-          "KeyPath": "../../certificate/localhost-key.pem"
+          "Path": "../../certificate/aspnet-dev-cert.pfx"
         }
       }
     }
