Added unauthorized routing for meta download

--- a/src/Ballware.ApiGateway.Service/appsettings.json
+++ b/src/Ballware.ApiGateway.Service/appsettings.json
@@ -37,6 +37,12 @@
     "Routes": [
       {
         "ServiceKey": "Meta",
+        "DownstreamPathTemplate": "/meta/{entity}/download",
+        "UpstreamPathTemplate": "/meta/{entity}/download",
+        "AllowedHttpMethods": [ "GET" ]
+      },
+      {
+        "ServiceKey": "Meta",
         "DownstreamPathTemplate": "/meta/{everything}",        
         "UpstreamPathTemplate": "/meta/{everything}",
         "AuthenticationOptions": {
