Fixed wrong storage upstream path

--- a/src/Ballware.ApiGateway.Service/appsettings.json
+++ b/src/Ballware.ApiGateway.Service/appsettings.json
@@ -77,7 +77,7 @@
       {
         "ServiceKey": "Storage",
         "DownstreamPathTemplate": "/{everything}",
-        "UpstreamPathTemplate": "/document/{everything}"
+        "UpstreamPathTemplate": "/storage/{everything}"
       },
       {
         "ServiceKey": "Ml",
