Migrated storage downstream path to new storage api

--- a/src/Ballware.ApiGateway.Service/appsettings.json
+++ b/src/Ballware.ApiGateway.Service/appsettings.json
@@ -76,7 +76,7 @@
       },
       {
         "ServiceKey": "Storage",
-        "DownstreamPathTemplate": "/{everything}",
+        "DownstreamPathTemplate": "/storage/{everything}",
         "UpstreamPathTemplate": "/storage/{everything}"
       },
       {
